[gd_scene load_steps=8 format=3 uid="uid://d04huotpateq"]

[ext_resource type="Script" uid="uid://dci5a1dr6sin0" path="res://scenes/ui/game_ui.gd" id="1_gwk6t"]
[ext_resource type="Script" uid="uid://cgiqc6e46avo6" path="res://resources/building/building_resource.gd" id="2_fct72"]
[ext_resource type="Resource" uid="uid://di3k7tp0sdtql" path="res://resources/building/tower.tres" id="3_ru5ln"]
[ext_resource type="Resource" uid="uid://b7eot0tl6c8sk" path="res://resources/building/village.tres" id="4_v1bdg"]
[ext_resource type="Texture2D" uid="uid://dk8j01pxa0sb" path="res://assets/UI/wood_icon.png" id="5_ru5ln"]
[ext_resource type="Resource" uid="uid://b7ddl5gvrvsap" path="res://resources/building/barracks.tres" id="5_v1bdg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v1bdg"]
atlas = ExtResource("5_ru5ln")
region = Rect2(39, 64, 49, 38)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_gwk6t")
building_resources = Array[ExtResource("2_fct72")]([ExtResource("3_ru5ln"), ExtResource("4_v1bdg"), ExtResource("5_v1bdg")])

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture = SubResource("AtlasTexture_v1bdg")
stretch_mode = 3

[node name="ResourceLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.61960787, 0.5294118, 0.4627451, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 48
text = "4"

[node name="BuildingSectionContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="TutorialContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_bottom = 130.0
grow_horizontal = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="PanelContainer" type="PanelContainer" parent="TutorialContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="TutorialContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TutorialButton" type="Button" parent="TutorialContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Tutorial"

[connection signal="pressed" from="TutorialContainer/PanelContainer/MarginContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
